[package]
name = "deepwhy"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckly <rruckley@gmail.com>"]
description = "Testing Deep Causality crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deep_causality = "0.6.2"
env_logger = "0.10.0"
log = "0.4.20"
